# mcp-tool-enumeration-service

./: .env.example  .gitignore  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  popular_mcp_packages.json  pyproject.toml  sample_test_configs.json  start.sh  test_configs.json  test_paypal_mcp.py  test_results.json
adapters/inbound/: __init__.py
adapters/inbound/http/: tool_enumeration_controller.py
app/: container.py
app/protocols/http/: main.py
application/: __init__.py
application/services/: __init__.py
application/services/tool_enumeration_service/: service.py
application/services/tool_enumeration_service/strategies/: __init__.py  http_strategy.py  mcp_json_strategy.py  stdio_strategy.py
application/use_cases/: enumerate_tools.py
domain/dto/: tool_enumeration_dtos.py
domain/entities/: mcp_config.py
domain/interfaces/: tool_discovery_interfaces.py
monitoring/: prometheus.yml
scripts/: README.md  preinstall_mcp_packages.sh  test_enumeration.py
src/adapters/: __init__.py
src/adapters/inbound/http/: tool_enumeration_controller.py
src/adapters/outbound/: __init__.py
src/app/: container.py
src/app/protocols/http/: main.py
src/application/services/tool_enumeration_service/: __init__.py  service.py
src/application/services/tool_enumeration_service/strategies/: __init__.py  http_strategy.py  (+2 more)
src/application/use_cases/: enumerate_tools.py
src/domain/: __init__.py
src/domain/dto/: tool_enumeration_dtos.py
src/domain/interfaces/: tool_discovery_interfaces.py
